# lessonpilot_third

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  docker-compose.yml  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260410_0001_phase0_initial.py  20260411_0002_phase2_document_snapshots.py  20260411_0003_phase3_auth_account.py  20260412_0004_phase4_billing.py  20260412_0005_phase6_ops.py  20260414_0006_sprint1_content_model.py  20260417_0007_cycle4_template.py  20260417_0008_task_template_id.py  20260418_0009_rag_knowledge_chunks.py  20260427_0010_phase7_10_asset_loop.py  20260428_0011_teacher_style_profile.py  20260429_0012_question_bank.py  20260429_0013_share_links.py  20260429_0014_semester_calendar.py  20260429_0015_class_groups.py  20260429_0016_teaching_units.py  20260429_0017_style_reflection.py  20260505_0018_cost_logs.py  20260505_0019_user_role_quota.py  (+1 more)
apps/api/app/: main.py
apps/api/lessonpilot_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/scripts/: seed_knowledge.py  seed_templates.py
apps/api/tests/: conftest.py  test_account_service.py  test_auth_service.py  test_content_schema.py  test_courseware_service.py  test_document_service.py  test_export.py  test_generation_service.py  test_health.py  test_knowledge_service.py  test_llm_service.py  test_question_bank_service.py  test_security_unit.py  test_style_profile.py  test_task_service.py  test_template_service.py
docs/: ACCEPTANCE.md  (+13 more)
(+340 files in other folders)
