[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lessonpilot-api"
version = "0.1.0"
description = "LessonPilot FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "bcrypt>=4.0.0",
  "psycopg[binary]>=3.2.1",
  "pydantic-settings>=2.4.0",
  "PyJWT>=2.9.0",
  "python-docx>=1.1.2",
  "sqlmodel>=0.0.22",
  "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
dev = [
  "pytest-cov>=6.0.0",
  "pytest>=8.3.2",
  "ruff>=0.6.2"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py", "alembic/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.lint.per-file-ignores]
"app/api/v1/endpoints/*.py" = ["B008"]
"app/core/security.py" = ["B008"]
